--- a/vim.conf
+++ b/vim.conf
@@ -105,6 +105,8 @@ call plug#begin('~/.vim/plugged')
       Plug 'junegunn/fzf.vim'
       Plug 'jayli/vim-easycomplete'
       Plug 'SirVer/ultisnips'
+      Plug 'jlanzarotta/bufexplorer'
+      Plug '~/software/fzf/bin/fzf'
 call plug#end()
 
 " 编辑vimrc相关配置文件
@@ -156,6 +158,16 @@ let g:airline_left_sep = ''
 let g:airline_left_alt_sep = ''
 let g:airline_right_sep = ''
 let g:airline_right_alt_sep = ''
+let g:airline#extensions#tabline#buffer_idx_mode = 1
+nmap <leader>1 <Plug>AirlineSelectTab1
+nmap <leader>2 <Plug>AirlineSelectTab2
+nmap <leader>3 <Plug>AirlineSelectTab3
+nmap <leader>4 <Plug>AirlineSelectTab4
+nmap <leader>5 <Plug>AirlineSelectTab5
+nmap <leader>6 <Plug>AirlineSelectTab6
+nmap <leader>7 <Plug>AirlineSelectTab7
+nmap <leader>8 <Plug>AirlineSelectTab8
+nmap <leader>9 <Plug>AirlineSelectTab9
 
 "----vim-buffer---- buffer管理
 nnoremap <silent> <c-p> :PreviousBuffer<cr>
@@ -219,10 +231,6 @@ let g:NERDCommentEmptyLines = 1
 let g:NERDTrimTrailingWhitespace = 1
 " Enable NERDCommenterToggle to check all selected lines is commented or not
 let g:NERDToggleCheckAllLines = 1
-
-"-----indentLine----- 可视化缩进
-let g:indent_guides_guide_size            = 1  " 指定对齐线的尺寸
-let g:indent_guides_start_level           = 2  " 从第二层开始可视化显示缩进
 
 "-----rainbow plugin---- 彩色括号
 let g:rainbow_active = 1
