--- a/vim.conf
+++ b/vim.conf
@@ -103,10 +103,11 @@ call plug#begin('~/.vim/plugged')
       Plug 'preservim/tagbar'
       Plug 'luochen1990/rainbow'
       Plug 'junegunn/fzf.vim'
-      Plug 'jayli/vim-easycomplete'
       Plug 'SirVer/ultisnips'
       Plug 'jlanzarotta/bufexplorer'
       Plug '~/software/fzf/bin/fzf'
+      " Plug 'jayli/vim-easycomplete'
+      " Plug 'Valloric/YouCompleteMe'
 call plug#end()
 
 " 编辑vimrc相关配置文件
@@ -373,15 +374,15 @@ let g:rainbow_conf = {
 " " let g:ycm_confirm_extra_conf=0
 
 "-----easy compelete
-noremap gr :EasyCompleteReference<CR>
-noremap gd :EasyCompleteGotoDefinition<CR>
-noremap rn :EasyCompleteRename<CR>
-noremap gb :BackToOriginalBuffer<CR>
-nnoremap <silent> <C-k> :EasyCompleteNextDiagnostic<CR>
-nnoremap <silent> <C-j> :EasyCompletePreviousDiagnostic<CR>
-
-let g:easycomplete_diagnostics_enable = 0
-let g:easycomplete_lsp_checking = 0
+" noremap gr :EasyCompleteReference<CR>
+" noremap gd :EasyCompleteGotoDefinition<CR>
+" noremap rn :EasyCompleteRename<CR>
+" noremap gb :BackToOriginalBuffer<CR>
+" nnoremap <silent> <C-k> :EasyCompleteNextDiagnostic<CR>
+" nnoremap <silent> <C-j> :EasyCompletePreviousDiagnostic<CR>
+"
+" let g:easycomplete_diagnostics_enable = 0
+" let g:easycomplete_lsp_checking = 0
 
 "==============================================================================
 "--------------------------------   cscope   ----------------------------------
