--- a/vim.conf
+++ b/vim.conf
@@ -103,10 +103,11 @@ call plug#begin('~/.vim/plugged')
       Plug 'preservim/tagbar'
       Plug 'luochen1990/rainbow'
       Plug 'junegunn/fzf.vim'
-      Plug 'jayli/vim-easycomplete'
       Plug 'SirVer/ultisnips'
       Plug 'jlanzarotta/bufexplorer'
       Plug '~/software/fzf/bin/fzf'
+      " Plug 'jayli/vim-easycomplete'
+      " Plug 'Valloric/YouCompleteMe'
 call plug#end()
 
 " 编辑vimrc相关配置文件
