--- a/vim.conf
+++ b/vim.conf
@@ -88,7 +88,7 @@ py3 import os
 " Plug插件管理
 """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 call plug#begin('~/.vim/plugged')
-      Plug 'Yggdroot/indentLine'
+      " Plug 'Yggdroot/indentLine'
       Plug 'chxuan/change-colorscheme'
       Plug 'chxuan/vim-buffer'
       Plug 'jiangmiao/auto-pairs'
@@ -98,7 +98,6 @@ call plug#begin('~/.vim/plugged')
       Plug 'vim-airline/vim-airline-themes'
       Plug 'terryma/vim-smooth-scroll'
       Plug 'preservim/nerdcommenter'
-      Plug 'honza/vim-snippets'
       Plug 'jayli/vim-dictionary'
       Plug 'preservim/tagbar'
       Plug 'luochen1990/rainbow'
@@ -107,7 +106,7 @@ call plug#begin('~/.vim/plugged')
       Plug 'jlanzarotta/bufexplorer'
       Plug '~/software/fzf/bin/fzf'
       " Plug 'jayli/vim-easycomplete'
-      " Plug 'Valloric/YouCompleteMe'
+      Plug 'Valloric/YouCompleteMe'
 call plug#end()
 
 " 编辑vimrc相关配置文件
@@ -202,16 +201,16 @@ noremap <silent> <c-f> :call smooth_scroll#down(&scroll*2, 0, 4)<CR>
 noremap <F3> :%s/\s\+$//<cr>
 noremap <F7> :set paste!<cr>
 
- "-----tagbar----- 函数列表
- let g:tagbar_width=30
- nnoremap <silent> <F4> :TagbarToggle<CR> " 将tagbar的开关按键设置为 F4
+"-----tagbar----- 函数列表
+let g:tagbar_width=30
+nnoremap <silent> <F4> :TagbarToggle<CR> " 将tagbar的开关按键设置为 F4
 
- " Jedi 配置
- let g:jedi#auto_initialization = 1
- let g:jedi#popup_on_dot = 1
- let g:jedi#popup_select_first = 0
- let g:jedi#show_call_signatures = "1"
- autocmd FileType python setlocal completeopt-=preview
+" Jedi 配置
+let g:jedi#auto_initialization = 1
+let g:jedi#popup_on_dot = 1
+let g:jedi#popup_select_first = 0
+let g:jedi#show_call_signatures = "1"
+autocmd FileType python setlocal completeopt-=preview
 
 "----nerdcommenter plugin---- 快捷注释
 "add spaces after comment delimiters by default
@@ -357,21 +356,29 @@ let g:rainbow_conf = {
 " "
 " " " use `:OR` for organize import of current buffer
 " " command! -nargs=0 OR   :call     CocAction('runCommand', 'editor.action.organizeImport')
-"
-" " "----ycm----  自动补全
-" " let g:ycm_key_list_select_completion = ['<Down>']
-" " let g:ycm_key_list_previous_completion = ['<Up>']
-" " let g:ycm_goto_buffer_command = 'horizontal-split'
-" " let g:ycm_server_python_interpreter='/usr/bin/python2'
-" " let g:ycm_global_ycm_extra_conf = '~/.vim/.ycm_extra_conf.py'
-" " let g:airline#extensions#tabline#enabled = 1
-" " let g:ycm_seed_identifiers_with_syntax = 1
-" " let g:ycm_complete_in_strings = 1
-" " let g:ycm_collect_identifiers_from_tags_files = 1
-" " let g:ycm_complete_in_comments = 1
-" " let g:ycm_min_num_of_chars_for_completion = 2
-" " let g:ycm_cache_omnifunc=0
-" " let g:ycm_confirm_extra_conf=0
+
+"----ycm----  自动补全
+nnoremap <leader>gf :YcmCompleter GoToDefinition<CR>
+nnoremap <leader>gg :YcmCompleter GoToDefinitionElseDeclaration<CR>
+let g:ycm_collect_identifiers_from_tags_files = 1
+
+set completeopt=menu,menuone
+let g:ycm_add_preview_to_completeopt = 0  " 关闭函数原型提示
+
+let g:ycm_show_diagnostics_ui = 0 " 关闭诊断信息
+let g:ycm_server_log_level = 'info'
+let g:ycm_min_num_identifier_candidate_chars = 2  " 两个字符触发 补全
+let g:ycm_collect_identifiers_from_comments_and_strings = 1 " 收集
+let g:ycm_complete_in_strings=1
+
+noremap <c-z> <NOP>
+let g:ycm_key_invoke_completion = '<c-z>'   " YCM 里触发语义补全有一个快捷键
+let g:ycm_max_num_candidates = 15  " 候选数量
+
+let g:ycm_semantic_triggers =  {
+                        \ 'c,cpp,python,java,go,erlang,perl': ['re!\w{2}'],
+                        \ 'cs,lua,javascript': ['re!\w{2}'],
+                        \ }
 
 "-----easy compelete
 " noremap gr :EasyCompleteReference<CR>
